; ModuleID = '/home/carl/AnghaBench/memcached/extr_thread.c_item_get.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_thread.c_item_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @item_get(i8* %0, i64 %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @hash(i8* %11, i64 %12)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = call i32 @item_lock(i32 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i32, i32* %10, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = load i32, i32* %8, align 4
  %21 = call i32* @do_item_get(i8* %16, i64 %17, i32 %18, i32* %19, i32 %20)
  store i32* %21, i32** %9, align 8
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @item_unlock(i32 %22)
  %24 = load i32*, i32** %9, align 8
  ret i32* %24
}

declare dso_local i32 @hash(i8*, i64) #1

declare dso_local i32 @item_lock(i32) #1

declare dso_local i32* @do_item_get(i8*, i64, i32, i32*, i32) #1

declare dso_local i32 @item_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
